--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,25 @@
 body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+    background-image: url(https://w.wallhaven.cc/full/zy/wallhaven-zyxvqy.jpg);
+    background-size: cover;
     margin: 0;
-    background-color: #f5f5f5;
+    height: 100vh;
 }
 
 .form_poo {
-    width: 400px;
-    background-color: #ffffff;
+    height: 80vh;
+    width: 600px;
+    background-color: #ffffff60;
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 15px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+#form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 h2 {
@@ -20,7 +27,13 @@ h2 {
 }
 
 .col-md-4 {
-    margin-bottom: 15px;
+    margin-bottom: 5px;
 }
 
+#re{
+    background-color: rgba(165, 42, 42, 0.534);
+}
 
+#rep{
+    background-color: rgba(42, 81, 165, 0.534);
+}
